// protoc --proto_path=. --proto_path=$HOME/.cache/JetBrains/GoLand2022.1/protoeditor/google/protobuf --go-grpc_out=. --go_out=. api/migrate.proto
syntax = "proto3";

package migrate;

option go_package="api/migrate";

/*message ConnectRequest{
  string login = 1;
  string password = 2;
  string host = 3;
  uint64 port = 4;
}*/
message VersionMessage{
  uint64 version = 1;
}
message MigrateRequest{
    string connection_string = 1;
    optional uint64 destination_version = 2;
}

service MigrationService {
  //rpc GetVersion(??) returns (google.protobuf.Empty){}
  rpc Migrate(MigrateRequest) returns (VersionMessage) {}
 // rpc ForceVersion(VersionMessage) returns (google.protobuf.Empty){}
}